[project]
name = "cala"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = "==3.10.*"

dependencies = [
    "datasets",
    "hydra-core>=1.3.2",
    "ipdb>=0.13.13",
    "jupyter>=1.1.1",
    "math-verify>=0.7.0",
    "peft==0.18.1",
    "transformers==4.49.0",
    "trl==0.17.0",
    "typer>=0.15.2",
    "wandb",
    "yq>=3.4.3",
    "deepspeed",
    "nltk",
    "numerize",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
    "rouge_score",
    "scikit-learn",
    "scipy",
    "tqdm",


]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu130"]
index-strategy = "unsafe-best-match"